--- a/src/components/CheckoutPage/index.css
+++ b/src/components/CheckoutPage/index.css
@@ -16,7 +16,8 @@
 
 .checkout-container > section {
   width: 100%;
-  background-color: #02fc8b99;
+  background-color: white;
+  border-radius: 10px;
   padding: 25px 35px;
 }
 
@@ -65,7 +66,7 @@
   aspect-ratio: 2;
   object-fit: contain;
   border-radius: 6px;
-  background-color: #00000033;
+  background-color: #EBEBEA;
 }
 
 @media screen and (min-width: 576px) {
